kubernetes/llm/strata/overlays/workload-prd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: strata
  namespace: llm
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-strata
  hostnames:
    - "strata.yuriykovalchuk.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: strata
          port: 8080
